@@ -2,6 +2,6 @@
 
 Des f&#233;licitations, vous avez chang&#233; le locale en <jwc id="insertLocaleName"/>.
 
-<p>Vous pouvez <jwc id="home">choisissez autre</jwc>.
+<p><jwc id="home"><jwc id="chooseAgainImage"/></jwc>
 
 </jwc>
