@@ -2,6 +2,6 @@
 
 Congratulazioni, avete cambiato il locale a <jwc id="insertLocaleName"/>.
 
-<p>Potete <jwc id="home">selezionare un altro</jwc>.
+<p><jwc id="home"><jwc id="chooseAgainImage"/></jwc>
 
 </jwc>
