@@ -7,8 +7,8 @@ for the running application.
 Select a new locale:
 
 <jwc id="form">
-<jwc id="inputLocale"/>
-<input type=submit value="Change!">
+	<jwc id="inputLocale"/>
+	<jwc id="changeButton"/>
 </jwc>
 
 </jwc>
