@@ -7,8 +7,8 @@ das locale f&#252;r die laufende Anwendung &#228;ndert.
 W&#228;hlen Sie ein neues locale aus:
 
 <jwc id="form">
-<jwc id="inputLocale"/>
-<input type=submit value="&#196;nderung!">
+	<jwc id="inputLocale"/>
+	<jwc id="changeButton"/>
 </jwc>
 
 </jwc>
