@@ -8,8 +8,8 @@ il locale per l' applicazione corrente.
 Selezionare un nuovo locale:
 
 <jwc id="form">
-<jwc id="inputLocale"/>
-<input type=submit value="Cambiamento!">
+	<jwc id="inputLocale"/>
+	<jwc id="changeButton"/>
 </jwc>
 
 </jwc>
