@@ -1,0 +1,7 @@
+# $Id$
+
+JAVA_FILES = *.java
+
+RESOURCE_FILES = *.application *.html *.jwc *.gif
+
+include $(SYS_MAKEFILE_DIR)/Package.mk
