@@ -1,3 +1,7 @@
+* Jan 3 2001 hship
+
+Update the tutorial to demonstrate localization of context and private assets.
+
 * Jan 2 2001 hship
 
 Add a tutorial to demonstration dynamically changing the locale.
